--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Gryffin: A Mixture of Pop & EDM</h1>
-    
+    <header>
+        <h1>Gryffin: A Mixture of Pop & EDM</h1>
+        <img src="Gryffin photo.png" alt="Griffin portrait">
+    </header>
+    <main>
+        <section id="About">
+            <h2>About Gryffin</h2>
+            <p>Dan Griffith "Gryffin" is a DJ, songwriter, and record producer. He is a San Francisco native and is Japanese-American. While studying electrical engineer at the University of South California, he spent much of his leisure time on music. The name "Griffin" is a combination of his last name, Griffith, and the mythical bird griffin.</p>
+        </section>
+    </main>
+  
 </body>
 </html>
