--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
 <body>
     <header>
         <h1>Gryffin: A Mixture of Pop & EDM</h1>
-        <img src="Gryffin photo.png" alt="Griffin portrait">
+        <img src="Gryffin photo.png" alt="Griffin portrait" width="600" height="400">
     </header>
     <main>
         <section id="About">
             <h2>About Gryffin</h2>
-            <p>Dan Griffith "Gryffin" is a DJ, songwriter, and record producer. He is a San Francisco native and is Japanese-American. While studying electrical engineer at the University of South California, he spent much of his leisure time on music. The name "Griffin" is a combination of his last name, Griffith, and the mythical bird griffin.</p>
+                <p>Dan Griffith "Gryffin" is a DJ, songwriter, and record producer. He is a San Francisco native and is Japanese-American. While studying electrical engineer at the University of South California, he spent much of his leisure time on music. The name "Griffin" is a combination of his last name, Griffith, and the mythical bird griffin.</p>
+        </section>
+
+        <section id="Discography">
+            <h2>Discography</h2>
+                <h3>Gravity</h3>
+                    <p>Released: 2019</p>
+                    <img src="Gravity album.png" alt="Gravity album" width="300" height="300">
+                <h3>Alive</h3>
+                    <p>Released: 2022</p>
+                    <img src="Alive album.png" alt="Alive album" width="300" height="300">
+
         </section>
     </main>
   
