--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <header>
         <h1>Gryffin: A Mixture of Pop & EDM</h1>
         <img src="Gryffin photo.png" alt="Griffin portrait" width="600" height="400">
+    
+        <nav>
+            <ul>
+                <li>
+                    <a href="#About">About</a>
+                </li>
+                <li>
+                    <a href="#Discography">Discography</a>
+                </li>
+                <li>
+                    <a href="#Top Singles">Top Singles</a>
+                </li>
+            </ul>
+        </nav>
+        
     </header>
     <main>
         <section id="About">
@@ -26,7 +41,17 @@
                 <h3>Alive</h3>
                     <p>Released: 2022</p>
                     <img src="Alive album.png" alt="Alive album" width="300" height="300">
+        </section>
 
+        <section id="Top Singles">
+            <h2>Top Singles</h2>
+            <ol>
+                <li><a href="https://www.youtube.com/watch?v=gBkWR-WfEeU">Feel Good</a></li>
+                <li><a href="https://www.youtube.com/watch?v=WAJbZjBErjU">Tie Me Down</a></li>
+                <li><a href="https://www.youtube.com/watch?v=QShq1KGbEOk">All You Need to Know</a></li>
+                <li><a href="https://www.youtube.com/watch?v=_X--xYexBdI">Body Back</a></li>
+                <li><a href="https://www.youtube.com/watch?v=jSNNv9w2phs">Woke Up in Love</a></li>
+            </ol>
         </section>
     </main>
   
