--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sabin's Favorite Band</title>
 </head>
 
 <body>
     <header>
         <h1>Gryffin: A Mixture of Pop & EDM</h1>
-        <img src="Gryffin photo.png" alt="Griffin portrait" width="600" height="400">
+        <img src="Images/Gryffin photo.png" alt="Griffin portrait" width="600" height="400">
     
         <nav>
             <ul>
@@ -25,22 +25,23 @@
                 </li>
             </ul>
         </nav>
-        
+
     </header>
     <main>
         <section id="About">
             <h2>About Gryffin</h2>
                 <p>Dan Griffith "Gryffin" is a DJ, songwriter, and record producer. He is a San Francisco native and is Japanese-American. While studying electrical engineer at the University of South California, he spent much of his leisure time on music. The name "Griffin" is a combination of his last name, Griffith, and the mythical bird griffin.</p>
+                <img src="Images/Gryffin stage.png" alt="Griffin on stage" width="600" height="400">
         </section>
 
         <section id="Discography">
             <h2>Discography</h2>
                 <h3>Gravity</h3>
                     <p>Released: 2019</p>
-                    <img src="Gravity album.png" alt="Gravity album" width="300" height="300">
+                    <img src="Images/Gravity album.png" alt="Gravity album" width="300" height="300">
                 <h3>Alive</h3>
                     <p>Released: 2022</p>
-                    <img src="Alive album.png" alt="Alive album" width="300" height="300">
+                    <img src="Images/Alive album.png" alt="Alive album" width="300" height="300">
         </section>
 
         <section id="Top Singles">
